fix some whitespace issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,11 +58,6 @@ td {
   border-right: 1px #777;
 }
 
-/* list item section */
-.short-item span {
-
-}
-
 /* insert section */
 input {
  display: block;
